Signing up, logging in, logging out... Initialized.

--- a/templates/index.html
+++ b/templates/index.html
@@ -281,14 +281,12 @@
     <script src="{{ url_for('serve_static', filename='dist/log-sign-auth.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/userName.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/loginOverlay.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/logoutOverlay.js') }}"></script>
 
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js'
-    
-        // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
         import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js'
-    
-        // Add Firebase products that you want to use
+
         import { getAuth } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js'
         import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js'
         const firebaseConfig = {
