--- a/templates/index.html
+++ b/templates/index.html
@@ -385,15 +385,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script src="{{ url_for('serve_static', filename='../dist/firebase-config.bundle.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/firebase-import.bundle.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/firebase-auth.bundle.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/log-sign-auth.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/userName.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/loginOverlay.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/logoutOverlay.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/dateChange.js') }}"></script>
-    <script src="{{ url_for('serve_static', filename='../static/dist/dark-light-mode.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/firebase-config.bundle.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/firebase-import.bundle.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/firebase-auth.bundle.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/log-sign-auth.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/userName.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/loginOverlay.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/logoutOverlay.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/dateChange.js') }}"></script>
+    <script src="{{ url_for('serve_static', filename='dist/dark-light-mode.js') }}"></script>
     <script>
         function updateTotal() {
             // Get all the expense rows
