--- a/templates/index.html
+++ b/templates/index.html
@@ -385,6 +385,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <!-- Flask Relative Path 
     <script src="{{ url_for('serve_static', filename='dist/firebase-config.bundle.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/firebase-import.bundle.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/firebase-auth.bundle.js') }}"></script>
@@ -394,6 +395,19 @@
     <script src="{{ url_for('serve_static', filename='dist/logoutOverlay.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/dateChange.js') }}"></script>
     <script src="{{ url_for('serve_static', filename='dist/dark-light-mode.js') }}"></script>
+    -->
+    
+    <!-- Github/Apache Relative Path -->
+    <script src="dist/firebase-config.bundle.js"></script>
+    <script src="dist/firebase-import.bundle.js"></script>
+    <script src="dist/firebase-auth.bundle.js"></script>
+    <script src="dist/log-sign-auth.js"></script>
+    <script src="dist/userName.js"></script>
+    <script src="dist/loginOverlay.js"></script>
+    <script src="dist/logoutOverlay.js"></script>
+    <script src="dist/dateChange.js"></script>
+    <script src="dist/dark-light-mode.js"></script>
+
     <script>
         function updateTotal() {
             // Get all the expense rows
