--- a/templates/index.html
+++ b/templates/index.html
@@ -398,15 +398,15 @@
     -->
     
     <!-- Github/Apache Relative Path -->
-    <script src="dist/firebase-config.bundle.js"></script>
-    <script src="dist/firebase-import.bundle.js"></script>
-    <script src="dist/firebase-auth.bundle.js"></script>
-    <script src="dist/log-sign-auth.js"></script>
-    <script src="dist/userName.js"></script>
-    <script src="dist/loginOverlay.js"></script>
-    <script src="dist/logoutOverlay.js"></script>
-    <script src="dist/dateChange.js"></script>
-    <script src="dist/dark-light-mode.js"></script>
+    <script src="static/dist/firebase-config.bundle.js"></script>
+    <script src="static/dist/firebase-import.bundle.js"></script>
+    <script src="static/dist/firebase-auth.bundle.js"></script>
+    <script src="static/dist/log-sign-auth.js"></script>
+    <script src="static/dist/userName.js"></script>
+    <script src="static/dist/loginOverlay.js"></script>
+    <script src="static/dist/logoutOverlay.js"></script>
+    <script src="static/dist/dateChange.js"></script>
+    <script src="static/dist/dark-light-mode.js"></script>
 
     <script>
         function updateTotal() {
