fixed flask issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -198,11 +198,11 @@
           
           #light-icon {
             display: none;
-            color: white;
+            color: black;
           }
           
           #dark-icon {
-            color: black;
+            color: white;
           }
           
         .overlayscheme {
@@ -211,7 +211,7 @@
         
     </style>
 </head>
-<body id="color-scheme-light">
+<body style="background-color: black;">
     <nav class="sidebar col-md-2 d-none d-md-block">
         <div class="position-sticky">
             <ul class="nav flex-column">
