--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
       
       
     <!-- Remove style if you want it all-black -->
-    <div class="container" id="container" style="background-color: black; padding: 20px; border-radius: 20px; border-width: 10px; border-color: black;">
+    <div class="container" id="container" style="background-color: black; padding: 20px; border-radius: 20px; border-width: 10px; border-color: white;">
         <div class="row">
             <div class="col-md-6">
                 <h1 class="mt-4 mb-3 text-center">Add Expense</h1>
@@ -306,8 +306,8 @@
                     </div>
                     <div class="form-group">
                         <label for="amount">Amount:</label>
-                        <input type="number" name="amount" step="0.01" class="form-control" required min="0" max="10000">
-                        <small class="form-text text-muted">Amount of 0 to 10,000, required</small>
+                        <input type="number" name="amount" step="0.01" class="form-control" required min="0.1" max="10000">
+                        <small class="form-text text-muted">Amount of 0.1 to 10,000, required</small>
 
                     </div>
                     <div class="form-group">
